--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
 .hidden {
     display: none;
 }
+
+img{
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.7;
+}
