--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,83 @@ img{
     left: 0;
     opacity: 0.7;
 }
+
+main{
+    display : flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+
+h5 {
+    margin : 1px;
+    background-color: whitesmoke;
+    height: 20px;
+    width: 100px;
+    opacity: 0.5;
+    font-family:'Times New Roman', Times, serif
+}
+
+#greeting{
+    margin: 50px;
+}
+
+#quote div:nth-child(1){
+    font-size: 16px;
+    line-height: 1.4;
+    font-style: italic;
+    font-family: sans-serif;
+    font-weight: 700;
+    color: rgb(77, 77, 77);
+
+}
+#quote div:nth-child(2){
+    font-size: 10px;
+    line-height: 1.4;
+    font-style: italic;
+    font-family: sans-serif;
+    font-weight: 500;
+    color: rgb(77, 77, 77);
+}
+
+#todo-form{
+    display : flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#todo-form div{
+    font-size: 30px;
+    font-weight: bold;
+    
+}
+#todo-form input{
+    font-size : 20px;
+    height : 25px;
+    width: 300px;
+    border: none;
+}
+
+#todo-box{
+    margin : 10px 0 50px 0;
+    height : 300px;
+    width : 400px;
+    border: 2px solid white;
+}
+
+ul{
+    font-size: 18px;
+    line-height: 2;
+}
+
+#weather {
+    font-size : 8px;
+    margin : 1px;
+    background-color: whitesmoke;
+    height: 30px;
+    width: 100px;
+    opacity: 0.5;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
